<resources>
    <string name="app_name" translatable="false">Smart Habits</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="settings">Settings</string>


    <string name="add_habit">Add habit</string>
    <string name="edit_habit">Edit habit</string>
    <string name="internal_error">Internal error</string>
    <string name="no_habit">No habits added</string>
    <string name="description">Description</string>


    <string name="reset_daily_habits">Reset daily habits</string>
    <string name="reset_weekly_habits">Reset weekly habits</string>
    <string name="reset_monthly_habits">Reset monthly habits</string>
    <string name="reset_yearly_habits">Reset yearly habits</string>
    <string name="list_daily_habits">List daily habits</string>
    <string name="list_weekly_habits">List weekly habits</string>
    <string name="list_monthly_habits">List monthly habits</string>
    <string name="list_yearly_habits">List yearly habits</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="daily_habits">Daily habits</string>
    <string name="weekly_habits">Weekly habits</string>
    <string name="monthly_habits">Monthly habits</string>
    <string name="yearly_habits">Yearly habits</string>
    <string name="habit_name_saved">habit %1$s saved!</string>

    <string name="habit_deletion_title">Delete habit</string>
    <string name="habit_deletion_message">Are you sure you want to delete %1$s?</string>

    <string name="habit_completion_title">Delete habit</string>
    <string name="habit_completion_message">Are you sure you want to complete %1$s?</string>

    <string name="daily_habits_reset">Daily habits reset</string>
    <string name="weekly_habits_reset">Weekly habits reset</string>
    <string name="monthly_habits_reset">Monthly habits reset</string>
    <string name="yearly_habits_reset">Yearly habits reset</string>

    <string name="habit_tap_to_complete">%1$s. Tap to complete</string>

    <string name="reset_daily_title">Reset daily habits</string>
    <string name="reset_daily_summary">Click here to reset daily habits</string>
    <string name="reset_weekly_title">Reset weekly habits</string>
    <string name="reset_weekly_summary">Click here to reset weekly habits</string>
    <string name="reset_monthly_title">Reset monthly habits</string>
    <string name="reset_monthly_summary">Click here to reset monthly habits</string>
    <string name="reset_yearly_title">Reset yearly habits</string>
    <string name="reset_yearly_summary">Click here to reset yearly habits</string>
    <string name="list_daily_title">List daily habits</string>
    <string name="list_daily_summary">Click here to list daily habits</string>
    <string name="list_weekly_title">List weekly habits</string>
    <string name="list_weekly_summary">Click here to list weekly habits</string>
    <string name="list_monthly_title">List monthly habits</string>
    <string name="list_monthly_summary">Click here to list monthly habits</string>
    <string name="list_yearly_title">List yearly habits</string>
    <string name="list_yearly_summary">Click here to list yearly habits</string>
</resources>