<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="resetDaily"
        app:summary="@string/reset_daily_summary"
        app:title="@string/reset_daily_title" />

    <Preference
        app:key="resetWeekly"
        app:summary="@string/reset_weekly_summary"
        app:title="@string/reset_weekly_title" />

    <Preference
        app:key="resetMonthly"
        app:summary="@string/reset_monthly_summary"
        app:title="@string/reset_monthly_title" />

    <Preference
        app:key="resetYearly"
        app:summary="@string/reset_yearly_summary"
        app:title="@string/reset_yearly_title" />

    <Preference
        app:key="listDaily"
        app:summary="@string/list_daily_summary"
        app:title="@string/list_daily_title" />

    <Preference
        app:key="listWeekly"
        app:summary="@string/list_weekly_summary"
        app:title="@string/list_weekly_title" />

    <Preference
        app:key="listMonthly"
        app:summary="@string/list_monthly_summary"
        app:title="@string/list_monthly_title" />

    <Preference
        app:key="listYearly"
        app:summary="@string/list_yearly_summary"
        app:title="@string/list_yearly_title" />

</PreferenceScreen>