<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dailyTaskFragment"
        android:contentDescription="@string/day"
        android:icon="@drawable/ic_calendar"
        android:title="@string/day"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/weeklyTasksFragment"
        android:contentDescription="@string/week"
        android:icon="@drawable/ic_calendar"
        android:title="@string/week"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/monthlyTasksFragment"
        android:contentDescription="@string/month"
        android:icon="@drawable/ic_calendar"
        android:title="@string/month"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/yearlyTasksFragment"
        android:contentDescription="@string/year"
        android:icon="@drawable/ic_calendar"
        android:title="@string/year"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:contentDescription="@string/year"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>