<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_color"
    tools:context=".presentation.view.fragment.DailyHabitListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/daily_habits_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutAnimation="@anim/slide_in_animation"
        tools:itemCount="6"
        tools:listitem="@layout/item_habit" />

    <ProgressBar
        android:id="@+id/daily_habits_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop" />

    <TextView
        android:id="@+id/daily_habits_error"
        style="@style/TextAppearance.RecyclerViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:text="@string/internal_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daily_habits_empty_list_message"
        style="@style/TextAppearance.RecyclerViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:text="@string/no_habit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_daily_habit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin_normal"
        android:layout_marginBottom="@dimen/fab_margin_normal"
        android:contentDescription="@string/add_habit"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="@dimen/fab_default_elevation"
        app:fabSize="normal"
        app:rippleColor="@color/colorPrimaryVariant"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>